debhelper (10.10.6) UNRELEASED; urgency=medium

  * Cleanup trailing whitespace in ancient debian/changelog entries and
    debian/rules.
  * Fix typo "belive" in debian/copyright and ancient debian/changelog
    entries.
  * Use HTTPS in debian/copyright format URL.

 -- Axel Beckert <abe@debian.org>  Fri, 27 Oct 2017 23:48:44 +0200

debhelper (10.10.5) unstable; urgency=medium

  * meson.pm: Add missing import of generated_file that broke
    cross building.
  * Dh_Lib: Fix regression where an empty line before the source
    paragraph in d/control would cause parse error.
    (Closes: #879762)

 -- Niels Thykier <niels@thykier.net>  Thu, 26 Oct 2017 19:10:51 +0000

debhelper (10.10.4) unstable; urgency=medium

  * meson.pm: Keep the meson cross file until dh_clean is
    called as otherwise ninja tries and fails to regenerate the
    build rules.  Thanks to Helmut Grohne for reporting the
    bug.  (Closes: #879658)
  * dh_dwz: Add new experimental tool to run dwz(1) to deduplicate
    ELF debugging symbols.  It should be generally be run before
    dh_strip (as dh_strip compresses the debug symbols and dwz
    expects uncompressed debug symbols).  (Closes: #878888)
  * dwz.pm: New sequence to add dh_dwz to the sequence.
  * d/control: Add a Suggets on dwz for the optional dh_dwz tool.
  * Dh_Lib.pm: Fix regression where the source section would not
    be parsed leading to dbgsym packages possibly getting an
    incorrect value in the Section field.  Thanks to Mihai
    Moldovan for reporting the issue.  (Closes: #879667)

 -- Niels Thykier <niels@thykier.net>  Wed, 25 Oct 2017 06:00:13 +0000

debhelper (10.10.3) unstable; urgency=medium

  * dh_strip: Skip the entire directory when an exclude rule
    parameter matches it.
  * dh_fixperms: Improve the documentation to assume less familarity
    with "Rules-Requires-Root" (R³).
  * dh_usrlocal: Ditto.
  * dh_builddeb: Ditto.
  * dh_usrlocal: Correct the group name when creating directories